src/main/java/com/example/campsitereservation/errors/ReservationNotAvailableException.java
package com.example.campsitereservation.errors;

public class ReservationNotAvailableException extends Exception {
	public ReservationNotAvailableException(String errorMessage) {
		super(errorMessage);
	}
}
